<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_4"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_header"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/holo_blue_dark"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editResult"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_line"
            android:layout_width="395dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_3">

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_del"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/del"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn__div"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_clear"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn__div"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/div"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_del"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/seven"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_8"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

                <Button
                    android:id="@+id/btn_9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/nine"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_mul"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_8"
                    app:layout_constraintTop_toTopOf="@+id/btn_8" />

                <Button
                    android:id="@+id/btn_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_9"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_7"
                    app:layout_constraintTop_toTopOf="@+id/btn_7" />

                <Button
                    android:id="@+id/btn_mul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/mul"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_9"
                    app:layout_constraintTop_toTopOf="@+id/btn_9" />

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/four"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_7" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/five"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_4"
                    app:layout_constraintTop_toTopOf="@+id/btn_4" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_6"
                    app:layout_constraintTop_toTopOf="@+id/btn_6" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/six"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_minus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_5"
                    app:layout_constraintTop_toTopOf="@+id/btn_5" />

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_4" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_1"
                    app:layout_constraintTop_toTopOf="@+id/btn_1" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_2"
                    app:layout_constraintTop_toTopOf="@+id/btn_2" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_3"
                    app:layout_constraintTop_toTopOf="@+id/btn_3" />

                <Button
                    android:id="@+id/btn_mod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/color_1"
                    android:text="@string/mod"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_0"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_1" />

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_dot"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_mod"
                    app:layout_constraintTop_toTopOf="@+id/btn_mod" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/dot"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/btn_equal"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_0"
                    app:layout_constraintTop_toTopOf="@+id/btn_0" />

                <Button
                    android:id="@+id/btn_equal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_1"
                    android:text="@string/equal"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_dot"
                    app:layout_constraintTop_toTopOf="@+id/btn_dot" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
